syntax = "proto3";

option csharp_namespace = "ProductService.Application.Grpc.Protos";

service ProductProtoService {
  rpc UpdateProductQuantity(UpdateProductQuantityRequest) returns (UpdateProductQuantityResponse);
  rpc GetProductsByIds(GetProductsByIdsRequest) returns (GetProductsByIdsResponse);
}

message UpdateProductQuantityRequest {
  string id = 1;
  int32 quantity = 2;
}

message UpdateProductQuantityResponse {
  int32 status = 1;
  string errorMessage = 2;
  string errorMessageCode = 3;
}

message GetProductsByIdsRequest {
  repeated string productIds = 1;
}

message GetProductsByIdsResponse {
  repeated ProductModel products = 1;
  int32 status = 2;
  string errorMessage = 3;
  string errorMessageCode = 4;
}

message ProductModel {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string price = 4;
}